--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "form-data": "^4.0.0",
     "js-file-download": "^0.4.12",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.6.4",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
